# so-101_Ros2

./: README.md
robot_devices/robots/: configs.py
so_arm_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  symlink_install_manifest.txt
so_arm_description/ament_cmake_environment_hooks/: local_setup.sh
so_arm_description/ament_cmake_symlink_install/: ament_cmake_symlink_install.cmake  ament_cmake_symlink_install_uninstall_script.cmake
so_arm_description/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/so_arm_description/: CMakeLists.txt  package.xml
src/so_arm_description/launch/: robot_description.launch.py
src/so_arm_feetech_interface/: README_LEADER_FOLLOWER.md  package.xml  setup.py
src/so_arm_feetech_interface/config/: feetech_config.yaml  leader_follower_config.yaml  rviz_config.rviz  test_config.yaml
src/so_arm_feetech_interface/launch/: feetech_interface.launch.py  follower_arm.launch.py  leader_arm.launch.py  leader_follower_arms.launch.py  leader_follower_teleop.launch.py  leader_follower_with_calibration.launch.py  visualization.launch.py
src/so_arm_feetech_interface/so_arm_feetech_interface/: calibration_client.py  calibration_node.py  feetech_interface_node.py  follower_arm_node.py  leader_arm_node.py  leader_follower_teleop_node.py  test_calibration.py  test_leader_follower.py
src/so_arm_feetech_interface/srv/: GetServo.srv  SetServo.srv
