<?xml version="1.0"?>
<package format="3">
  <name>so_arm_feetech_interface</name>
  <version>0.0.1</version>
  <description>Leader-follower FeeTech arm interface and calibration for SO-101 robot.</description>
  <maintainer email="brianjblank7@gmail.com">Brian Blankenau</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 